Jarsigner integration and updated to latest fenxlib-2.0.0.0-RC1